update index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,68 +1,53 @@
 ---
-import Layout from "@layouts/Layout.astro";
-import Container from "@components/Container.astro";
-import { SITE, HOME, SOCIALS } from "@consts";
 import ArrowCard from "@components/ArrowCard.astro";
+import Container from "@components/Container.astro";
 import Link from "@components/Link.astro";
+import { HOME, SITE, SOCIALS } from "@consts";
+import Layout from "@layouts/Layout.astro";
 import { getCollection } from "astro:content";
-import type { CollectionEntry } from "astro:content";
 
 const blog = (await getCollection("blog"))
   .filter((post) => !post.data.draft)
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
   .slice(0, SITE.NUM_POSTS_ON_HOMEPAGE);
-
-const projects: CollectionEntry<"projects">[] = (
-  await getCollection("projects")
-)
-  .filter((project) => !project.data.draft)
-  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-  .slice(0, SITE.NUM_PROJECTS_ON_HOMEPAGE);
 ---
 
 <Layout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <aside data-pagefind-ignore>
-      <h1 class="font-semibold text-black dark:text-white">
-        Introducing Astro Micro 🔬
+      <h1 class="text-8xl font-extrabold text-black dark:text-white">
+        About <strike>Ryan Rey</strike>
+        <span class="text-bungee">r2</span>
       </h1>
+
       <div class="space-y-16">
         <section>
           <article class="space-y-4">
-            <span>
-              <p>
-                Astro Micro is an accessible theme for <Link
-                  href="https://astro.build/">Astro</Link
-                >. It's a fork of
-                <Link href="https://github.com/markhorn-dev">
-                  Mark Horn's
-                </Link> popular theme <Link
-                  href="https://astro.build/themes/details/astronano/"
-                  >Astro Nano</Link
-                >. Like Nano, Micro comes with zero frameworks installed.
-              </p>
-              <p>
-                Micro adds features like <Link href="https://pagefind.app/"
-                  >Pagefind</Link
-                > for search, <Link href="https://giscus.app">Giscus</Link> for comments,
-                and more. For a full list of changes, see this <Link
-                  href="/blog/00-micro-changelog">blog post</Link
-                >.
-              </p>
-            </span>
             <span class="animate">
               <p>
-                Micro still comes with everything great about Nano — full type
-                safety, a sitemap, an RSS feed, and Markdown + MDX support.
-                Styled with TailwindCSS and preconfigured with system, light,
-                and dark themes.
+                With 7 years of experience in startups, IT consulting, and
+                system integrations, I specialize in building sleek,
+                user-friendly web applications. From landing pages to
+                enterprise-level solutions, I’ve worked with modern frameworks
+                like <Link href="https://react.dev">React</Link>, <Link
+                  href="https://nextjs.org">Next.js</Link
+                >, and <Link href="https://www.typescriptlang.org"
+                  >TypeScript</Link
+                >, always striving to deliver exceptional user experiences.
               </p>
+            </span>
+
+            <span class="animate">
               <p>
-                Visit
-                <Link href="https://github.com/trevortylerlee/astro-micro">
-                  Astro Micro on GitHub
-                </Link>
-                to fork the repository to get started.
+                Outside of work, my interest lies in bouldering, skateboarding,
+                riding my fixie around the city and shooting photos.
+              </p>
+            </span>
+
+            <span class="animate">
+              <p>
+                Writing short posts about concepts I'm learning to deepen my
+                understanding and refine my mental models.
               </p>
             </span>
           </article>
@@ -86,32 +71,14 @@ const projects: CollectionEntry<"projects">[] = (
           </ul>
         </section>
 
-        <section class="animate space-y-6">
-          <div class="flex flex-wrap items-center justify-between gap-y-2">
-            <h2 class="font-semibold text-black dark:text-white">
-              Recent projects
-            </h2>
-            <Link href="/projects"> See all projects </Link>
-          </div>
-          <ul class="not-prose flex flex-col gap-4">
-            {
-              projects.map((project) => (
-                <li>
-                  <ArrowCard entry={project} />
-                </li>
-              ))
-            }
-          </ul>
-        </section>
-
         <section class="animate space-y-4">
           <h2 class="font-semibold text-black dark:text-white">
             Let's Connect
           </h2>
           <article>
             <p>
-              If you want to get in touch with me about something or just to say
-              hi, reach out on social media or send me an email.
+              I'm currently accepting freelance projects depending on the fit.
+              Let’s chat!
             </p>
           </article>
           <ul class="not-prose flex flex-wrap gap-2">
