fix on index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const blog = (await getCollection("blog"))
 <Layout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <aside data-pagefind-ignore>
-      <h1 class="text-8xl font-extrabold text-black dark:text-white">
+      <h1 class="animate text-8xl font-extrabold text-black dark:text-white">
         About <strike>Ryan Rey</strike>
         <span class="text-bungee">r2</span>
       </h1>
