upate posts to notes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import { SITE } from "@consts";
       </Link>
 
       <nav class="flex items-center gap-5 text-sm">
-        <Link href="/blog">blog</Link>
+        <Link href="/notes">Notes</Link>
 
         <button
           id="magnifying-glass"
