--- a/src/components/PostNavigation.astro
+++ b/src/components/PostNavigation.astro
@@ -6,7 +6,7 @@ const { prevPost, nextPost } = Astro.props;
   {
     prevPost?.slug ? (
       <a
-        href={`/blog/${prevPost?.slug}`}
+        href={prevPost.slug}
         class="group relative flex flex-nowrap rounded-lg border border-black/15 px-4 py-3 pl-10 no-underline transition-colors duration-300 ease-in-out hover:bg-black/5 hover:text-black focus-visible:bg-black/5 focus-visible:text-black dark:border-white/20 dark:hover:bg-white/5 dark:hover:text-white dark:focus-visible:bg-white/5 dark:focus-visible:text-white"
       >
         <svg
@@ -26,7 +26,7 @@ const { prevPost, nextPost } = Astro.props;
             class="translate-x-1 transition-transform duration-300 ease-in-out group-hover:translate-x-0 group-focus-visible:translate-x-0"
           />
         </svg>
-        <div class="flex items-center text-sm">{prevPost?.data.title}</div>
+        <div class="flex items-center text-sm">{prevPost.title}</div>
       </a>
     ) : (
       <div class="invisible" />
@@ -36,7 +36,7 @@ const { prevPost, nextPost } = Astro.props;
   {
     nextPost?.slug ? (
       <a
-        href={`/blog/${nextPost?.slug}`}
+        href={nextPost.slug}
         class="group relative flex flex-grow flex-row-reverse flex-nowrap rounded-lg border border-black/15 px-4 py-4 pr-10 no-underline transition-colors duration-300 ease-in-out hover:bg-black/5 hover:text-black focus-visible:bg-black/5 focus-visible:text-black dark:border-white/20 dark:hover:bg-white/5 dark:hover:text-white dark:focus-visible:bg-white/5 dark:focus-visible:text-white"
       >
         <svg
@@ -56,7 +56,7 @@ const { prevPost, nextPost } = Astro.props;
             class="-translate-x-1 transition-transform duration-300 ease-in-out group-hover:translate-x-0 group-focus-visible:translate-x-0"
           />
         </svg>
-        <div class="flex items-center text-sm">{nextPost?.data.title}</div>
+        <div class="flex items-center text-sm">{nextPost.title}</div>
       </a>
     ) : (
       <div class="invisible" />
